test/scc_test/exp/semantic-errors/032.a
032.t:4:10: error: expression must have scalar type